# plover-finnish

./: .dir-locals.el  .gitignore  .pylintrc  .python-version  readme.md  setup.cfg
plugin/plover_finnish/: plover_finnish.py  setup.cfg
plugin/plover_finnish/plover_finnish/: meta.py  system.py  test_vowel_group_service.py  vowel_group_service.py
stroke_dictionary_creator/: pyproject.toml
stroke_dictionary_creator/conflicts/: manually_resolved_conflicts.yaml
stroke_dictionary_creator/input_dictionaries/: 15_manually_resolved_conflicts.yaml  20_words.yaml  25_autogenerated_joukahainen_compound_nouns.json  25_autogenerated_joukahainen_compound_nouns.yaml  30_autogenerated_joukahainen_single.json  30_autogenerated_joukahainen_single.yaml  autogenerated_words_joukahainen.yaml  suffixes.yaml  words.yaml
stroke_dictionary_creator/output/: plover_finnish_output.json
stroke_dictionary_creator/stroke_dictionary_creator/: build_from_scratch.sh  create_compound_noun_strokes.py  create_dictionary.py  create_double_strokes.py  create_single_strokes.py  create_strokes_from_wordlist.py  inflection_service.py  manually_resolved_conflicts_service.py  parser.py  readme.md  stroke_parser.py  stroke_validation.py  test_inflection_service.py  test_parser.py  test_stroke_parser.py  word_list_generator.py
stroke_dictionary_creator/stroke_dictionary_creator/generators/: all_words.py  compound_words.py  generators.py  short_words.py  test_all_words.py  test_compound_words.py  test_generators.py  test_short_words.py  (+2 more)
stroke_dictionary_creator/tests/: test_stroke_dictionary_creator.py
(+284 files in other folders)
